# tester-

./: .editorconfig  .env.example  .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/web/: next.config.js  package.json  tailwind.config.js
builder/: 01-product-requirements.md  02-information-architecture.md  04-system-architecture.md  05-database-schema.md  06-api-contracts.md  07-monorepo-structure.md  08-computation-engine-spec.md  09-engineering-scope-definition.md  10-development-phases.md  11-environment-and-devops.md  12-deployment-target.md  INTEGRATION_GUIDE.md  PRD-doc.md  UI.md  rules.md  system-design-doc.md  testing.md
deploy/: README.md
services/analysis-engine/: Dockerfile  pyproject.toml  requirements.txt
services/analysis-engine/src/: __init__.py  main.py
services/analysis-engine/src/models/: __init__.py  analyzers.py
services/analysis-engine/src/system_instructions/: __init__.py  selector.py
services/analysis-engine/tests/: test_analysis_engine.py
services/ocr-service/: Dockerfile  pyproject.toml  requirements.txt
services/ocr-service/src/: __init__.py  main.py
services/ocr-service/src/engines/: __init__.py  base.py  easyocr_engine.py  paddleocr_engine.py  tesseract_engine.py
services/ocr-service/src/postprocessors/: __init__.py  confidence_scorer.py
services/ocr-service/src/preprocessors/: __init__.py  image_preprocessor.py
services/ocr-service/tests/: test_ocr_engines.py  test_preprocessing.py
services/orchestrator/: Dockerfile  pyproject.toml  requirements.txt
services/orchestrator/src/: __init__.py  grounding.py  main.py
services/orchestrator/src/input_processor/: __init__.py  validator.py
services/orchestrator/src/response_builder/: __init__.py  assembler.py
services/orchestrator/tests/: test_orchestrator.py
services/router-service/: Dockerfile  pyproject.toml  requirements.txt
services/router-service/src/: __init__.py  main.py
services/router-service/src/clients/: __init__.py  openrouter_client.py
services/router-service/src/routing/: __init__.py  model_router.py
services/router-service/tests/: test_router_service.py
services/stt-service/: Dockerfile  pyproject.toml  requirements.txt
services/stt-service/src/: __init__.py  main.py
services/stt-service/src/engines/: __init__.py  base.py  deepgram_engine.py  whisper_engine.py
services/stt-service/src/postprocessors/: __init__.py  wer_calculator.py
services/stt-service/src/preprocessors/: __init__.py  audio_preprocessor.py
services/stt-service/tests/: test_stt_engines.py
supabase/: config.toml  seed.sql
(+47 files in other folders)
