[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-service"
version = "0.1.0"
description = "Multi-engine OCR service (Tesseract, EasyOCR, PaddleOCR)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "pillow>=10.2.0",
    "numpy>=1.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
